header section done navigation and logo aded

--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- google font kit  -->
+    <!-- fontawesome  -->
+    <script src="https://kit.fontawesome.com/86987497d4.js" crossorigin="anonymous"></script>
+    <!-- main css -->
+    <link rel="stylesheet" href="styles/influencer.css">
     <title>influence-gear</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <h2 class="logo">
+                Influencer products
+            </h2>
+         <div class="menu">
+            <ul>
+                <li>Home</li>
+                <li>Products</li>
+                <li>Sign Up</li>
+                <li>Log in</li>
+                <li><i class="fa-sharp fa-light fa-magnifying-glass" style="color: #000000;"></i></li>
+                <li><i class="fa-regular fa-cart-shopping" style="color: #000000;"></i></li>
+            </ul>
+         </div>
+        </nav>
+    </header>
+    <main>
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
