hero section done

--- a/index.html
+++ b/index.html
@@ -33,6 +33,25 @@
         </nav>
     </header>
     <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h1 class="title hero-title">
+                    Start your Journey as <br>
+                    Influencer
+                </h1>
+                <p class="description hero-description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.
+                </p>
+                <button class="btn-primary">
+                    preebook now
+                </button>
+
+            </div>
+            <!-- hero img  -->
+            <div class="hero-img">
+                <img src="images/main-camera.png" alt="" class="camera">
+            </div>
+        </section>
     </main>
     <footer>
 
