--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
                 <img src="images/main-camera.png" alt="" class="camera">
             </div>
         </section>
+        <!-- hero section end here  -->
+        <section class="partner">
+            <img src="logos/Alibaba.svg" alt="" class="partner-logo">
+            <img src="logos/Amazon.svg" alt="" class="partner-logo">
+            <img src="logos/Daraz.pk Logo.svg" alt="" class="partner-logo">
+            <img src="logos/Ebay.svg" alt="" class="partner-logo">
+            <img src="logos/Rakuten.svg" alt="" class="partner-logo">
+            <img src="logos/Walmart.svg" alt="" class="partner-logo">
+            <img src="logos/Target.svg" alt="" class="partner-logo">
+        </section>
     </main>
     <footer>
 
