hero section and partner section responsive don

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     Influencer
                 </h1>
                 <p class="description hero-description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem  vestibulum sed scelerisque eros. Lectus faucibus.
                 </p>
                 <button class="btn-primary">
                     preebook now
