Product section responsive done

--- a/index.html
+++ b/index.html
@@ -62,6 +62,327 @@
             <img src="logos/Walmart.svg" alt="" class="partner-logo">
             <img src="logos/Target.svg" alt="" class="partner-logo">
         </section>
+
+        <div class="section-header">
+            <h2 class="section-title">Populer collection</h2>
+        </div>
+        <section class="collection">
+            
+            <!--
+                .
+                 product-card start
+                .
+             -->
+            <div class="card">
+                <div class="product-photo">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="card-content">
+                    <h3 class="product-title">Flex Tripod</h3>
+                <h4 class="price">
+                    $50.40
+                </h4>
+
+                <h5 class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="rating-ratio"><p>4.9</p></span>
+                </h5>
+                <p class="product-description">
+                    Wordwide shifting available
+                    Buyers protection possible!
+                </p>
+                </div>
+            </div>
+             <!--
+                .
+                 product-card 1 end
+                .
+             -->
+            <!--
+                .
+                 product-card 2 start
+                .
+             -->
+            <div class="card">
+                <div class="product-photo">
+                    <img src="images/mic.png" alt="">
+                </div>
+                <div class="card-content">
+                    <h3 class="product-title">Microphone</h3>
+                <h4 class="price">
+                    $50.40
+                </h4>
+
+                <h5 class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="rating-ratio"><p>4.9</p></span>
+                </h5>
+                <p class="product-description">
+                    Wordwide shifting <br>available <br>
+                    Buyers protection possible!
+                </p>
+                </p>
+                </div>
+            </div>
+             <!--
+                .
+                 product-card 2 end
+                .
+             -->
+            <!--
+                .
+                 product-card 3 start
+                .
+             -->
+            <div class="card">
+                <div class="product-photo">
+                    <img src="images/airpod.png" alt="">
+                </div>
+                <div class="card-content">
+                    <h3 class="product-title">Air Buds</h3>
+                <h4 class="price">
+                    $50.40
+                </h4>
+
+                <h5 class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="rating-ratio"><p>4.9</p></span>
+                </h5>
+                <p class="product-description">
+                    Wordwide shifting <br>available <br>
+                    Buyers protection possible!
+                </p>
+                </p>
+                </div>
+            </div>
+             <!--
+                .
+                 product-card 3 end
+                .
+             -->
+            <!--
+                .
+                 product-card 4 start
+                .
+             -->
+            <div class="card">
+                <div class="product-photo">
+                    <img src="images/drone.png" alt="">
+                </div>
+                <div class="card-content">
+                    <h3 class="product-title">Drone</h3>
+                <h4 class="price">
+                    $50.40
+                </h4>
+
+                <h5 class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="rating-ratio"><p>4.9</p></span>
+                </h5>
+                <p class="product-description">
+                    Wordwide shifting <br>available <br>
+                    Buyers protection possible!
+                </p>
+                </p>
+                </div>
+            </div>
+             <!--
+                .
+                 product-card 4 end
+                .
+             -->
+            <!--
+                .
+                 product-card 5 start
+                .
+             -->
+            <div class="card">
+                <div class="product-photo">
+                    <img src="images/lights.png" alt="">
+                </div>
+                <div class="card-content">
+                    <h3 class="product-title">Light Setup</h3>
+                <h4 class="price">
+                    $50.40
+                </h4>
+
+                <h5 class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="rating-ratio"><p>4.9</p></span>
+                </h5>
+                <p class="product-description">
+                    Wordwide shifting <br>available <br>
+                    Buyers protection possible!
+                </p>
+                </p>
+                </div>
+            </div>
+             <!--
+                .
+                 product-card 5end
+                .
+             -->
+            <!--
+                .
+                 product-card 6 start
+                .
+             -->
+            <div class="card">
+                <div class="product-photo">
+                    <img src="images/setup.png" alt="">
+                </div>
+                <div class="card-content">
+                    <h3 class="product-title">Photoshoot set</h3>
+                <h4 class="price">
+                    $50.40
+                </h4>
+
+                <h5 class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="rating-ratio"><p>4.9</p></span>
+                </h5>
+                <p class="product-description">
+                    Wordwide shifting <br>available <br>
+                    Buyers protection possible!
+                </p>
+                </p>
+                </div>
+            </div>
+             <!--
+                .
+                 product-card 6 end
+                .
+             -->
+            <!--
+                .
+                 product-card 7 start
+                .
+             -->
+            <div class="card">
+                <div class="product-photo">
+                    <img src="images/camera.png" alt="">
+                </div>
+                <div class="card-content">
+                    <h3 class="product-title">Vloging camera</h3>
+                <h4 class="price">
+                    $50.40
+                </h4>
+
+                <h5 class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="rating-ratio"><p>4.9</p></span>
+                </h5>
+                <p class="product-description">
+                    Wordwide shifting <br>available <br>
+                    Buyers protection possible!
+                </p>
+                </p>
+                </div>
+            </div>
+             <!--
+                .
+                 product-card 7 end
+                .
+             -->
+            <!--
+                .
+                 product-card 8 start
+                .
+             -->
+            <div class="card">
+                <div class="product-photo">
+                    <img src="images/single-light.png" alt="">
+                </div>
+                <div class="card-content">
+                    <h3 class="product-title">Green Screen</h3>
+                <h4 class="price">
+                    $50.40
+                </h4>
+
+                <h5 class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="rating-ratio"><p>4.9</p></span>
+                </h5>
+                <p class="product-description">
+                    Wordwide shifting <br>available <br>
+                    Buyers protection possible!
+                </p>
+                </p>
+                </div>
+            </div>
+             <!--
+                .
+                 product-card 8 end
+                .
+             -->
+            <!--
+                .
+                 product-card 9start
+                .
+             -->
+            <div class="card">
+                <div class="product-photo">
+                    <img src="images/action.png" alt="">
+                </div>
+                <div class="card-content">
+                    <h3 class="product-title">Action Camera</h3>
+                <h4 class="price">
+                    $50.40
+                </h4>
+
+                <h5 class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <p id="point">4.9</p>
+                </h5>
+                <p class="product-description">
+                    Wordwide shifting <br>available <br>
+                    Buyers protection possible!
+                </p>
+                </div>
+            </div>
+             <!--
+                .
+                 product-card end
+                .
+             -->
+
+        </section>
     </main>
     <footer>
 
