single product section done

--- a/index.html
+++ b/index.html
@@ -383,6 +383,21 @@
              -->
 
         </section>
+        <!-- collection secton end here  -->
+        <section class="single-product">
+            <img src="images/gear.png" alt="">
+            <div class="single-product-info">
+                <h1 class="sp-title">
+                    Featured products at one place
+                </h1>
+                <p class="sp-description">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+                <button class="btn-primary btn-sp">
+                    Join now
+                </button>
+            </div>
+        </section>
     </main>
     <footer>
 
