influencer project done

--- a/index.html
+++ b/index.html
@@ -400,6 +400,17 @@
         </section>
     </main>
     <footer>
+        <div class="ftr">
+            <h2> Influencer products</h2>
+            <p class="copyright"> Copyright © 2023  influencer products</p>
+            
+        </div>
+        <div class="social">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-dribbble" ></i>
+            <i class="fa-brands fa-twitter" ></i>
+            <i class="fa-brands fa-youtube" ></i>
+        </div>
 
     </footer>
     
